# stupid-simple-image-labels

./: .dockerignore  Dockerfile  app.py  build.sh  models.py  pyproject.toml  run.py  settings.py  ssil.spec  utilities.py
.github/workflows/: build-and-push-docker.yml
static/: script.js  styles.css
templates/: base.html  index.html  label-images.html  view-labels.html
