[tool.poetry]
name = "stupid-simple-image-labels"
version = "0.1.0"
description = ""
authors = ["Bjarnthor Egilsson <bjarnthoregilsson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9 < 3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
cx-freeze = "^6.14.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.10.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

