[tool.poetry]
name = "stupid-simple-image-labels"
version = "0.1.0"
description = ""
authors = ["Bjarnthor Egilsson <bjarnthoregilsson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9 < 3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.10.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''